--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   another_xlider: ^3.0.2
   flutter_inappwebview: ^6.1.5
   sqflite: ^2.4.1
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -90,7 +91,10 @@ flutter:
     - assets/images/
     - assets/fonts/ 
     - assets/icons/
-    - assets/lottie/
+    - assets/lottie/  
+    - assets/web/js/
+    - assets/web/css/
+    - assets/web/html/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
