--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:requestLegacyExternalStorage="true"
-        android:label="bookapp"
+        android:label="المعرفة الدينية"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
