--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   sqflite: ^2.4.1
   share_plus: ^11.0.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -95,7 +96,7 @@ flutter:
     - assets/web/js/
     - assets/web/css/
     - assets/web/html/
-
+    - assets/database/bookmark.sqlite
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
