--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: bookapp
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  
+
   persistent_bottom_nav_bar_v2: ^6.1.0
   flutter_localizations:
     sdk: flutter
@@ -64,6 +64,7 @@ dependencies:
   sqflite: ^2.4.1
   share_plus: ^11.0.0
   url_launcher: ^6.3.2
+  flutter_phoenix: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -81,7 +82,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -90,9 +90,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/fonts/ 
+    - assets/fonts/
     - assets/icons/
-    - assets/lottie/  
+    - assets/lottie/
     - assets/web/js/
     - assets/web/css/
     - assets/web/html/
@@ -114,21 +114,12 @@ flutter:
     #     - asset: fonts/Schyler-Regular.ttf
     #     - asset: fonts/Schyler-Italic.ttf
     #       style: italic
-    - family: A
+    - family: App
       fonts:
-        - asset: assets/fonts/AGCRegular.ttf
-        - asset: assets/fonts/AGCBold.ttf
+        - asset: assets/fonts/IBMPlexSansArabic-Regular.ttf
+        - asset: assets/fonts/IBMPlexSansArabic-SemiBold.ttf
           weight: 700
-    - family: B
-      fonts:
-        - asset: assets/fonts/Al-Jazeera-Arabic-Regular.ttf
-        - asset: assets/fonts/Al-Jazeera-Arabic-Bold.ttf
-          weight: 700
-    - family: C
-      fonts:
-        - asset: assets/fonts/BloombergArabicBetav4-Regular.ttf
-        - asset: assets/fonts/BloombergArabicBetav4-Bold.ttf
-          weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
