--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   share_plus: ^11.0.0
   url_launcher: ^6.3.2
   flutter_phoenix: ^1.1.1
+  palette_generator: ^0.3.3+7
+  file_picker: ^10.2.1
 
 dev_dependencies:
   flutter_test:
