--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ flutter:
     - assets/images/
     - assets/fonts/
     - assets/icons/
+    - assets/newicons/
     - assets/lottie/
     - assets/web/js/
     - assets/web/css/
@@ -110,12 +111,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #       style: italic
+  fonts:
+    - family: app
+      fonts:
+        - asset: fonts/IBMPlexSansArabic-Regular.ttf
+        - asset: fonts/IBMPlexSansArabic-SemiBold.ttf
+          weight: 700
   #   - family: App
   #     fonts:
   #       - asset: assets/fonts/IBMPlexSansArabic-Regular.ttf
