--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_phoenix: ^1.1.1
   palette_generator: ^0.3.3+7
   file_picker: ^10.2.1
+  flutter_html: ^3.0.0
 
 dev_dependencies:
   flutter_test:
